--- a/app/src/main/res/layout/fragment_house_creation.xml
+++ b/app/src/main/res/layout/fragment_house_creation.xml
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/createButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -87,7 +87,7 @@
             app:layout_constraintStart_toStartOf="@+id/editTextText" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/joinButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
