--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -84,7 +84,7 @@
             android:autofillHints="password" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/forgotPassButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="13dp"
