--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
+            app:destination="@id/forgotPasswordFragment" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
@@ -39,5 +42,26 @@
         android:id="@+id/houseCreationFragment"
         android:name="it.unitn.disi.fumiprovv.roommates.fragments.login.HouseCreationFragment"
         android:label="fragment_house_creation"
-        tools:layout="@layout/fragment_house_creation" />
+        tools:layout="@layout/fragment_house_creation" >
+        <action
+            android:id="@+id/action_houseCreationFragment_to_houseCreatedFragment"
+            app:destination="@id/houseCreatedFragment" />
+        <action
+            android:id="@+id/action_houseCreationFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/houseCreatedFragment"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.login.HouseCreatedFragment"
+        android:label="fragment_house_created"
+        tools:layout="@layout/fragment_house_created" >
+        <action
+            android:id="@+id/action_houseCreatedFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/forgotPasswordFragment"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.login.ForgotPasswordFragment"
+        android:label="fragment_forgot_password"
+        tools:layout="@layout/fragment_forgot_password" />
 </navigation>
