Added authentication with Firebase

--- a/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/app/src/main/res/layout/fragment_forgot_password.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/registerEmailField2"
+            android:id="@+id/forgotEmailField"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:height="20dp"
@@ -30,17 +30,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.537" />
-
-        <TextView
-            android:id="@+id/backToLoginButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:text="@string/forgot_password_to_login"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/registerEmailField2"
-            app:layout_constraintTop_toBottomOf="@+id/registerEmailField2"
-            app:layout_constraintVertical_bias="0.047" />
 
         <ImageView
             android:id="@+id/imageView5"
@@ -67,7 +56,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/forgotPasswordButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="134dp"
@@ -76,7 +65,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/registerEmailField2"
+            app:layout_constraintTop_toBottomOf="@+id/forgotEmailField"
             app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
