--- a/app/src/main/res/layout/fragment_house_creation.xml
+++ b/app/src/main/res/layout/fragment_house_creation.xml
@@ -24,6 +24,7 @@
             android:inputType="text"
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
+            android:textColor="@android:color/primary_text_dark"
             android:textColorHint="@android:color/primary_text_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
@@ -109,6 +110,7 @@
             android:inputType="text"
             android:paddingStart="6dp"
             android:paddingEnd="6dp"
+            android:textColor="@android:color/primary_text_dark"
             android:textColorHint="@android:color/primary_text_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
