--- a/app/src/main/res/layout/fragment_house_creation.xml
+++ b/app/src/main/res/layout/fragment_house_creation.xml
@@ -12,7 +12,7 @@
         android:background="@color/background_dark">
 
         <EditText
-            android:id="@+id/editTextText2"
+            android:id="@+id/createHouseField"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginTop="376dp"
@@ -40,7 +40,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.503"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText2" />
+            app:layout_constraintTop_toBottomOf="@+id/createHouseField" />
 
         <TextView
             android:id="@+id/textView5"
@@ -50,8 +50,8 @@
             android:layout_marginBottom="12dp"
             android:text="@string/no_house_create_label"
             android:textColor="@android:color/primary_text_dark"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText2"
-            app:layout_constraintStart_toStartOf="@+id/editTextText2" />
+            app:layout_constraintBottom_toTopOf="@+id/createHouseField"
+            app:layout_constraintStart_toStartOf="@+id/createHouseField" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -84,8 +84,8 @@
             android:layout_marginBottom="14dp"
             android:text="@string/no_house_join_label"
             android:textColor="@android:color/primary_text_dark"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText"
-            app:layout_constraintStart_toStartOf="@+id/editTextText" />
+            app:layout_constraintBottom_toTopOf="@+id/joinHouseField"
+            app:layout_constraintStart_toStartOf="@+id/joinHouseField" />
 
         <Button
             android:id="@+id/joinButton"
@@ -95,10 +95,10 @@
             android:text="@string/no_house_join_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+            app:layout_constraintTop_toBottomOf="@+id/joinHouseField" />
 
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/joinHouseField"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:layout_marginTop="108dp"
