--- a/app/src/main/res/layout/fragment_house_created.xml
+++ b/app/src/main/res/layout/fragment_house_created.xml
@@ -78,7 +78,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/shareButton"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@android:drawable/ic_menu_share"
