--- a/app/src/main/res/layout/fragment_house_creation.xml
+++ b/app/src/main/res/layout/fragment_house_creation.xml
@@ -15,7 +15,6 @@
             android:id="@+id/createHouseField"
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_marginTop="376dp"
             android:width="300dp"
             android:height="48dp"
             android:background="@drawable/border"
@@ -26,10 +25,12 @@
             android:paddingEnd="6dp"
             android:textColor="@android:color/primary_text_dark"
             android:textColorHint="@android:color/primary_text_dark"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/joinHouseField"
+            app:layout_constraintVertical_bias="0.533" />
 
         <Button
             android:id="@+id/createButton"
@@ -37,16 +38,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:text="@string/no_house_create_btn"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createHouseField" />
+            app:layout_constraintTop_toBottomOf="@+id/createHouseField"
+            app:layout_constraintVertical_bias="0.102" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
             android:layout_marginBottom="12dp"
             android:text="@string/no_house_create_label"
             android:textColor="@android:color/primary_text_dark"
