Added progress bar on login, registration, house creation. Bug fix: clearing backstack after house creation.

--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -133,6 +133,18 @@
             app:layout_constraintStart_toStartOf="@+id/registerPassword2Field"
             app:layout_constraintTop_toBottomOf="@+id/registerPassword2Field"
             app:layout_constraintVertical_bias="0.251" />
+
+        <ProgressBar
+            android:id="@+id/registrationProgressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="100dp"
+            android:layout_height="96dp"
+            android:backgroundTint="#00000000"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
