--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -57,7 +57,9 @@
             app:destination="@id/houseCreationFragment" />
         <action
             android:id="@+id/action_homeFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/houseCreationFragment"
@@ -66,14 +68,14 @@
         tools:layout="@layout/fragment_house_creation" >
         <action
             android:id="@+id/action_houseCreationFragment_to_houseCreatedFragment"
-            app:destination="@id/houseCreatedFragment" />
+            app:destination="@id/houseCreatedFragment"
+            app:popUpTo="@id/houseCreationFragment"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_houseCreationFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_houseCreationFragment_self"
+            app:destination="@id/homeFragment"
             app:popUpTo="@id/houseCreationFragment"
-            app:popUpToInclusive="false" />
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/houseCreatedFragment"
@@ -82,7 +84,9 @@
         tools:layout="@layout/fragment_house_created" >
         <action
             android:id="@+id/action_houseCreatedFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/houseCreatedFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/forgotPasswordFragment"
