--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_item_a"
-        android:title="A" />
+        android:id="@+id/menu_item_home"
+        android:icon="@drawable/home"
+        android:title="@string/home" />
     <item
-        android:id="@+id/menu_item_b"
-        android:title="B" />
+        android:id="@+id/menu_item_turni"
+        android:icon="@drawable/turni"
+        android:title="@string/turni" />
     <item
-        android:id="@+id/menu_item_c"
-        android:title="C" />
+        android:id="@+id/menu_item_calendario"
+        android:icon="@drawable/calendar"
+        android:title="@string/Calendario" />
+    <item
+        android:id="@+id/menu_item_listaSpesa"
+        android:icon="@drawable/cart"
+        android:title="@string/listaSpesa" />
+    <item
+        android:id="@+id/menu_item_gestioneSpese"
+        android:icon="@drawable/spese"
+        android:title="@string/gestioneSpese" />
+    <item
+        android:id="@+id/menu_item_rubrica"
+        android:icon="@drawable/phone"
+        android:title="@string/rubrica" />
+    <item
+        android:id="@+id/menu_item_note"
+        android:icon="@drawable/note"
+        android:title="@string/note" />
+    <item
+        android:id="@+id/menu_item_sondaggi"
+        android:icon="@drawable/sondaggi"
+        android:title="@string/sondaggi" />
+
 </menu>
