--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,13 +10,14 @@
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/background_dark">
 
         <EditText
             android:id="@+id/registerNameField"
             android:layout_width="300dp"
             android:layout_height="48dp"
+            android:layout_marginTop="20dp"
             android:height="20dp"
             android:autofillHints="emailAddress"
             android:background="@drawable/border"
@@ -27,44 +28,42 @@
             android:paddingEnd="6dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/registerEmailField"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/registerEmailField"
-            app:layout_constraintTop_toBottomOf="@+id/registerEmailField"
-            app:layout_constraintVertical_bias="0.067" />
+            app:layout_constraintTop_toBottomOf="@+id/registerEmailField" />
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="118dp"
+            android:layout_height="121dp"
             android:contentDescription="@string/logo_description"
             android:src="@drawable/ic_home"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.118" />
+            app:layout_constraintVertical_bias="0.165" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:text="@string/registration_register_label"
             android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
-            app:layout_constraintHorizontal_bias="0.48"
+            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            app:layout_constraintVertical_bias="0.037"
             tools:text="@string/registration_register_label" />
 
         <EditText
             android:id="@+id/registerEmailField"
             android:layout_width="300dp"
             android:layout_height="48dp"
+            android:layout_marginTop="44dp"
             android:height="20dp"
             android:autofillHints="emailAddress"
             android:background="@drawable/border"
@@ -75,18 +74,16 @@
             android:paddingEnd="6dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.429" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <EditText
             android:id="@+id/registerPassword2Field"
             android:layout_width="300dp"
             android:layout_height="48dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="1dp"
             android:autofillHints="password"
             android:background="@drawable/border"
@@ -106,6 +103,7 @@
             android:id="@+id/registerPasswordField"
             android:layout_width="300dp"
             android:layout_height="48dp"
+            android:layout_marginTop="20dp"
             android:autofillHints="password"
             android:background="@drawable/border"
             android:ems="10"
@@ -115,24 +113,20 @@
             android:paddingEnd="6dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/registerNameField"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/registerNameField"
-            app:layout_constraintTop_toBottomOf="@+id/registerNameField"
-            app:layout_constraintVertical_bias="0.088" />
+            app:layout_constraintTop_toBottomOf="@+id/registerNameField" />
 
         <Button
             android:id="@+id/registrationButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
             android:text="@string/login_register_btn"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/registerPassword2Field"
-            app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="@+id/registerPassword2Field"
-            app:layout_constraintTop_toBottomOf="@+id/registerPassword2Field"
-            app:layout_constraintVertical_bias="0.251" />
+            app:layout_constraintTop_toBottomOf="@+id/registerPassword2Field" />
 
         <ProgressBar
             android:id="@+id/registrationProgressBar"
@@ -147,4 +141,4 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</FrameLayout>
+</ScrollView>
