--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,11 +6,6 @@
     app:startDestination="@id/loginFragment">
 
 
-    <action android:id="@+id/action_pop_out_of_login"
-        app:popUpTo="@id/loginFragment"
-        app:popUpToInclusive="true" />
-
-
     <fragment
         android:id="@+id/loginFragment"
         android:name="it.unitn.disi.fumiprovv.roommates.fragments.login.LoginFragment"
@@ -35,6 +30,9 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_loginFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
@@ -103,6 +101,22 @@
             app:destination="@id/loginFragment"
             app:launchSingleTop="true"
             app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" >
+        <action
+            android:id="@+id/action_settingsFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/settingsFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_settingsFragment_to_houseCreationFragment"
+            app:destination="@id/houseCreationFragment"
+            app:popUpTo="@id/settingsFragment"
             app:popUpToInclusive="true" />
     </fragment>
 </navigation>
