--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,7 +3,8 @@
     <item
         android:id="@+id/menu_item_home"
         android:icon="@drawable/home"
-        android:title="@string/home" />
+        android:title="@string/home"
+        />
     <item
         android:id="@+id/menu_item_turni"
         android:icon="@drawable/turni"
