--- a/app/src/main/res/layout/fragment_nuovo_evento.xml
+++ b/app/src/main/res/layout/fragment_nuovo_evento.xml
@@ -19,13 +19,10 @@
             android:layout_height="48dp"
             android:hint="Enter text"/>
 
-        <EditText
-            android:id="@+id/dataEvento"
+        <DatePicker
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:inputType="date"
-            android:hint="GG/MM/AAAA"
-            />
+            android:layout_height="wrap_content"
+            android:id="@+id/dataEvento"/>
 
         <!-- Submit Button -->
         <Button
