--- a/app/src/main/res/layout/fragment_new_contact.xml
+++ b/app/src/main/res/layout/fragment_new_contact.xml
@@ -2,15 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/newNoteLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.NewNoteFragment">
+    android:id="@+id/newContactLayout"
+    tools:context=".fragments.NewContactFragment">
+
 
     <EditText
-        android:id="@+id/noteText2"
+        android:id="@+id/contactNameField"
         android:layout_width="360dp"
         android:layout_height="54dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/note_new_contact_name"
@@ -18,15 +20,15 @@
         android:textColor="@android:color/primary_text_dark"
         android:textColorHint="@android:color/secondary_text_dark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/noteText"
+        android:id="@+id/contactNumField"
         android:layout_width="360dp"
         android:layout_height="54dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:gravity="start|top"
         android:hint="@string/note_new_contact_number"
@@ -36,5 +38,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/noteText2" />
+        app:layout_constraintTop_toBottomOf="@+id/contactNameField" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
