--- a/app/src/main/res/layout/fragment_sondaggi.xml
+++ b/app/src/main/res/layout/fragment_sondaggi.xml
@@ -5,4 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.SondaggiFragment"
-    ></FrameLayout>
+    >
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/surveysRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp" />
+
+</FrameLayout>
