lavoro su pagina sondaggi. Creata pagina nuovo sondaggio. I sondaggi sono mostrati correttamente

--- a/app/src/main/res/layout/fragment_sondaggi.xml
+++ b/app/src/main/res/layout/fragment_sondaggi.xml
@@ -6,10 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".fragments.SondaggiFragment"
     >
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/surveysRecyclerView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/surveysRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="16dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_new_sondaggio"
+            android:text="+"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_margin="10dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
