--- a/app/src/main/res/layout/survey_item.xml
+++ b/app/src/main/res/layout/survey_item.xml
@@ -26,6 +26,13 @@
             android:layout_marginTop="16dp">
 
         </RadioGroup>
+
+        <Button
+            android:id="@+id/buttonVota"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Vota"
+            android:layout_gravity="center"/>
     </LinearLayout>
 
 
