--- a/app/src/main/res/layout/spesa_comune.xml
+++ b/app/src/main/res/layout/spesa_comune.xml
@@ -2,7 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="150dp"
     android:background="@drawable/border"
     android:layout_marginVertical="5dp"
     android:layout_marginHorizontal="18dp">
@@ -48,14 +48,28 @@
                 android:text="Responsabile: blabla"/>
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/valoreSpesaComune"
+        <LinearLayout
             android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="50€"
-            android:textAlignment="center"/>
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/valoreSpesaComune"
+                android:layout_width="match_parent"
+                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:text="50€"
+                android:textAlignment="center"/>
+            <Button
+                android:id="@+id/pagaSpesaComune"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="paga"
+                android:visibility="invisible"/>
+        </LinearLayout>
+
 
     </LinearLayout>
 
