fixed bug with the action bar; fixed bug where the title didn't change when going back to a page; going back goes always to the home now

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,8 +13,22 @@
     <action android:id="@+id/action_to_calendario"
         app:destination="@id/calendarioFragment"/>
 
-    <action android:id="@+id/action_to_turnipulizia"
-        app:destination="@id/turniPuliziaFragment"/>
+    <action
+        android:id="@+id/action_to_spesa"
+        app:destination="@id/shoppingListFragment"
+        app:popUpTo="@id/homeFragment" />
+
+    <action
+        android:id="@+id/action_to_rubrica"
+        app:destination="@id/contactFragment"
+        app:popUpTo="@id/homeFragment" />
+
+    <action
+        android:id="@+id/action_to_note"
+        app:destination="@id/noteFragment"
+        app:popUpTo="@id/homeFragment" />
+
+
 
 
     <fragment
