--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,6 +28,11 @@
         app:destination="@id/noteFragment"
         app:popUpTo="@id/homeFragment" />
 
+    <action
+        android:id="@+id/action_to_impostazioni"
+        app:destination="@id/settingsFragment"
+        app:popUpTo="@id/homeFragment" />
+
 
 
 
